--- a/healthcare.ipynb
+++ b/healthcare.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Pandarallel will run on 6 workers.\n",
+      "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n",
+      "\n",
+      "WARNING: You are on Windows. If you detect any issue with pandarallel, be sure you checked out the Troubleshooting page:\n",
+      "https://nalepae.github.io/pandarallel/troubleshooting/\n"
+     ]
+    }
+   ],
    "source": [
     "# 머신러닝 및 데이터 처리 관련 라이브러리\n",
     "import tensorflow as tf\n",
@@ -16,6 +28,53 @@
     "from pandarallel import pandarallel ; pandarallel.initialize()\n",
     "from sklearn.model_selection import GroupKFold, StratifiedKFold"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'KaggleDatasets' from 'kaggledatasets' (c:\\Users\\JYP\\anaconda3\\lib\\site-packages\\kaggledatasets\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_1152\\691138263.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Built in 라이브러리\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mkaggledatasets\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mKaggleDatasets\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mcollections\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mCounter\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mglob\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mglob\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'KaggleDatasets' from 'kaggledatasets' (c:\\Users\\JYP\\anaconda3\\lib\\site-packages\\kaggledatasets\\__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "# Built in 라이브러리\n",
+    "from kaggledatasets import KaggleDatasets\n",
+    "from collections import Counter\n",
+    "from datetime import datetime\n",
+    "from glob import glob\n",
+    "import warnings\n",
+    "import requests\n",
+    "import hashlib\n",
+    "import imageio\n",
+    "import IPython\n",
+    "import sklearn\n",
+    "import urllib\n",
+    "import zipfile\n",
+    "import pickle\n",
+    "import random\n",
+    "import shutil\n",
+    "import string\n",
+    "import json\n",
+    "import math\n",
+    "import time\n",
+    "import gzip\n",
+    "import ast\n",
+    "import sys\n",
+    "import io\n",
+    "import os\n",
+    "import gc\n",
+    "import re"
+   ]
   }
  ],
  "metadata": {
@@ -25,8 +84,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
